[tool.poetry]
name = "redash_toolbelt"
version = "0.1.2"
description = "Redash API client and tools to manage your instance."
authors = ["Redash Maintainers"]
license = "BSD-2-Clause"

packages = [
    { include = "redash_toolbelt" }
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"
click = "^7.0"
natsort = "^7.1.1"
Pygments = "^2.8.0"
tabulate = "^0.8.9"
click-help-colors = "^0.9"
click-didyoumean = "^0.0.3"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
coverage = "^5.4"
coverage-badge = "^1.0.1"

[tool.poetry.scripts]
rtb = "redash_toolbelt.cli:main"
gdpr-scrub = "redash_toolbelt.examples.gdpr_scrub:lookup"
find-tables = "redash_toolbelt.examples.find_table_names:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
