[tool.poetry]
name = "redash_toolbelt"
version = "0.1.6"
description = "Redash API client and tools to manage your instance."
authors = ["Redash Maintainers"]
license = "BSD-2-Clause"
homepage = "https://github.com/getredash/redash-toolbelt"
repository = "https://github.com/getredash/redash-toolbelt"
readme = "README.md"

packages = [
    { include = "redash_toolbelt" }
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"
click = "^7.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gdpr-scrub = "redash_toolbelt.examples.gdpr_scrub:lookup"
find-tables = "redash_toolbelt.examples.find_table_names:main"
clone-dashboard-and-queries = "redash_toolbelt.examples.clone_dashboard_and_queries:main"
export-queries = "redash_toolbelt.examples.query_export:main"
redash-migrate = "redash_toolbelt.examples.migrate:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
